Moved more styles rules over to global as this makes more sense. Also cleaned up spacing issues and tested in desktop, tablet and mobile.

--- a/css/index.css
+++ b/css/index.css
@@ -234,23 +234,19 @@ html,
 body {
   height: 100%;
 }
-html,
-body {
-  /* font-family: 'Roboto', sans-serif;*/
-}
-h1,
-h2,
-h3,
-h4,
-h5 {
-  /* font-family: 'Indie Flower', cursive; */
-}
 h1 {
   /* font-size: 4rem; */
+  margin: 0 0 2rem;
+  font-family: 'Anton', sans-serif;
+  font-size: 4rem;
 }
 h2 {
   /* font-size: 3.2rem; */
   padding-bottom: 10px;
+  margin: 0 0 1rem;
+}
+h3 {
+  margin: 0 0 1rem;
 }
 h4 {
   /* font-size: 2.5rem; */
@@ -307,7 +303,7 @@ img {
 }
 .container .main-content .left {
   width: 70%;
-  padding: 5rem;
+  /*padding: 5rem;*/
 }
 @media (max-width: 1000px) {
   .container .main-content .left {
@@ -319,26 +315,12 @@ img {
     padding: 2rem;
   }
 }
-.container .main-content .left h1 {
-  margin: 0 0 2rem;
-  font-family: 'Anton', sans-serif;
-  font-size: 4rem;
-}
-.container .main-content .left h2 {
-  margin: 0 0 1rem;
-}
-.container .main-content .left h3 {
-  margin: 0 0 1rem;
-}
-.container .main-content .left p {
-  /* .banana()*/
-}
 .container .main-content .left ul {
   line-height: 3.5rem;
 }
 .container .main-content .about-left {
   width: 50%;
-  padding: 5rem;
+  padding: 1rem;
 }
 @media (max-width: 500px) {
   .container .main-content .about-left {
@@ -375,12 +357,17 @@ img {
 }
 .container .main-content .about-right {
   width: 50%;
-  padding: 8rem 0;
+  padding: 5rem 2rem;
 }
 @media (max-width: 500px) {
   .container .main-content .about-right {
     width: 100%;
     padding: 1rem 0;
+  }
+}
+@media (max-width: 500px) {
+  .container .main-content .about-right p {
+    padding: 1rem;
   }
 }
 .container .main-content .products {
@@ -395,7 +382,7 @@ img {
   }
 }
 .container .main-content .products li {
-  padding: 1rem;
+  padding: 0.3rem;
 }
 .container .main-content .products .strains {
   flex: 1.5023;
