--- a/less/global.less
+++ b/less/global.less
@@ -9,23 +9,23 @@
   html, body {
     height: 100%;
   }
-
-  html, body {
-    /* font-family: 'Roboto', sans-serif;*/
-  }
-  
-  h1, h2, h3, h4, h5 {
-    /* font-family: 'Indie Flower', cursive; */
-  }
   
   h1 {
     /* font-size: 4rem; */
+    margin: 0 0 2rem;
+    font-family: @h-fonts;
+    font-size: 4rem;
   }
   
   h2 {
     /* font-size: 3.2rem; */
     padding-bottom: 10px;
+    margin: 0 0 1rem;
   }
+  
+  h3 {
+    margin: 0 0 1rem;
+  }  
   
   h4 {
     /* font-size: 2.5rem; */
