--- a/less/main-content.less
+++ b/less/main-content.less
@@ -10,27 +10,9 @@
 
 		.left {
 			width: 70%;
-			padding: 5rem;
+			/*padding: 5rem;*/
 			@media @tablet {width: 65%;}
 			@media @tablet {padding: 2rem;}
-	
-			h1 {
-				margin: 0 0 2rem;
-				font-family: @h-fonts;
-				font-size: 4rem;
-			}
-		
-			h2 {
-				margin: 0 0 1rem;
-			}
-		
-			h3 {
-				margin: 0 0 1rem;
-			}
-
-			p {
-				/* .banana()*/
-			}
 
 			ul {
 				line-height: 3.5rem;
@@ -39,7 +21,7 @@
 
 		.about-left {
 			width: 50%;
-			padding: 5rem;
+			padding: 1rem;
 			@media @mobile {
 				width: 100%;
 				padding: 1rem;
@@ -76,10 +58,16 @@
 		
 		.about-right {
 			width: 50%;
-			padding: 8rem 0;
+			padding: 5rem 2rem;
 			@media @mobile {
 				width: 100%;
 				padding: 1rem 0;
+			}
+
+			p {
+				@media @mobile {
+					padding: 1rem;
+				}
 			}
 		}
 
@@ -92,7 +80,7 @@
 			}
 			
 			li {
-				padding: 1rem;
+				padding: 0.3rem;
 			}
 			
 			.strains {
